# Travas_Pro

./: CMFRC522.h  Main.cpp  Motor1  MotorADC  Motorthething  README.md  RFID.cpp  Ultrasonic.cpp  buzzer_client.cpp  main_client.cpp  newmain.cpp  sample1.cpp
Client/: BuzzCtrl.cpp  BuzzCtrl.h  CMakeLists.txt  CppThread.h  RFIDThread.cpp  RFIDThread.h  Readmsg.cpp  Readmsg.h  client.cpp  client.h  final5.cpp  linetracking.cpp  linetracking.h  motor.cpp  motor.h  pca9685.cpp  pca9685.h  ultrasonic.cpp  ultrasonic.h
Unit_Test/Cardinfo_com/: CMFRC522.h  CMakeLists.txt  CppThread.h  Mock_CMFRC522.h  Mock_serclie.h  Server.cpp  Server.h  client.cpp  client.h  ser&clie_test01.cpp
Unit_Test/Server_test1/: CMakeLists.txt  Readmsg.h  Server.cpp  Server.h  Server_test.cpp  Trafficsig.h  serverfinal2.cpp
Unit_Test/Server_tsig_test/: CMakeLists.txt  CppThread.h  Readmsg.h  Server.cpp  Server.h  Trafficsig.cpp  Trafficsig.h  Tsig_test.cpp
Unit_test/: Buzzer_test.cpp  LineTrack_test.cpp  Motor_test.cpp  RFID_test  RFID_test.cpp  buzzer_client.cpp  test1.cpp
gh repo clone petzval/: pi2piconnection_btferret
server/: CMakeLists.txt  Readmsg.cpp  Readmsg.h  Server.cpp  Server.h  Trafficsig.h  main_server.cpp  pigpio.h  serverfinal1.cpp  serverfinal2.cpp
test/: RFID_test.cpp
